--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,28 @@ pip-log.txt
 /.idea/
 /.apt_generated/
 /.apt_generated_tests/
+
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/web/node_modules
+/web/.pnp
+/web.pnp.js
+
+# testing
+/web/coverage
+
+# production
+/web/build
+
+# misc
+/web.DS_Store
+/web.env.local
+/web.env.development.local
+/web.env.test.local
+/web.env.production.local
+
+/webnpm-debug.log*
+/webyarn-debug.log*
+/webyarn-error.log*
